# project-generator

./: .gitignore  .travis.yml  .travis.yml.generate  CMakeLists.txt  README.md  TEMPLATE_NAMEConfig.cmake.in  project-generator.sh  projectStructure.sh  test_program_answers.txt
cmake/: CMakeLists.txt  IncludeUrl.cmake  ProjectDescribe.cmake  ProjectDoc.cmake  ProjectOptions.cmake  ProjectSystem.cmake  ProjectVersion.cmake  TEMPLATE_NAMEDescribe.cmake  TEMPLATE_NAMEDoc.cmake  TEMPLATE_NAMEOptions.cmake  TEMPLATE_NAMEPackage.cmake  TEMPLATE_NAMEVersion.cmake  YCMBootstrap.cmake
cmake/template/: TEMPLATE_NAMEConfig.cmake.in
cmake/templates/: TEMPLATE_NAMEConfig.cmake.in
doc/: CMakeLists.txt  groups.dox  main.dox
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt  ExampleLibrary.cpp  ExampleLibrary.hpp
programs/: CMakeLists.txt
programs/exampleProgram/: CMakeLists.txt  ExampleProgram.cpp  ExampleProgram.hpp  main.cpp
scripts/admin/: update-dox.sh
scripts/gnome/: TEMPLATE_LOWER.desktop
scripts/package/: make_package.bat  make_package.sh
share/: CMakeLists.txt
tests/: CMakeLists.txt  testExampleLibrary.cpp
